--- a/index.html
+++ b/index.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Kinshasa Digital Academy</title>
+</head>
+
+<body>
+  <br>
+  <img src="images/logo_kda.jpg" alt="Logo de KDA" width="150">
+  <p>Bienvenue dans KDA</p>
+  <p>
+    KDA est un un centre de <strong>formation professionnel</strong> offrant une formation intensive au apprenant
+    dans le but :
+  </p>
+  <ol>
+    <li>L’insertion professionnel</li>
+    <li>L’acquisition des compétences</li>
+    <li><i>L’impact sociale</i></li>
+  </ol>
+  <br>
+  <p>Pédagogie active</p>
+  <p>
+    La pédagogie utilisée est la pédagogie active car avec cette pédagogie l’apprenant acquiert des
+    compétences dans une <strong>démarche inductive</strong>, c’est-à-dire. </p>
+  <ul>
+    <li>Il doit commettre plusieurs erreurs, tester des solutions et tirer ses propres conclusions</li>
+    <li>Est acteur tout au long de son apprentissage, c’est qu’il n’est pas là pour absorber des
+      connaissances qui lui sont dictées</li>
+  </ul>
+  <p>Il existe une cita on intéressante qui correspond à l’esprit de cette <em>pédagogie</em> :</p>
+  <i>
+    “What you hear,you forget <br>
+    What you see,you remeber <br>
+    What you do,you understand “Confucius
+  </i>
+  <figure>
+    <img src="images/conficius.jpg" alt="Portrait de Confucius" height="500" width="400">
+    <figcaption>Confucius 479 Av.JC</figcaption>
+  </figure>
+  <p>Pour plus de citations de Confucius rendez vous sur le site <a
+      href="#">https://citation-celebre.leparisien.fr/auteur/confucius</a></p>
+  <p>Horaire des cours à la KDA</p>
+  <table>
+    <thead>
+      <tr>
+        <th colspan="2">Programme détaillé</th>
+      </tr>
+      <tr>
+        <th>Heures</th>
+        <th>Activités</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td rowspan="2">7h00’-8h00</td>
+        <td>Chants en groupe</td>
+      </tr>
+      <tr>
+        <td>Beaucoup de code</td>
+      </tr>
+      <tr>
+        <td>10h00’-12h00’</td>
+        <td>Pause</td>
+      </tr>
+      <tr>
+        <td>13h-23h00’</td>
+        <td>Beaucoup de code</td>
+      </tr>
+      <tr>
+        <td colspan="2">Fin de la journée</td>
+      </tr>
+    </tbody>
+  </table>
+  <p>A KDA, nous apprenons aussi à résoudre des équations et inéquations Mathématiques de la
+    forme :</p>
+  <p>
+    <b>Ax<sub>2</sub>+Bx+C&gt;C<sub>2</sub>x+15</b>
+  </p>
+  <p>H<sub>2</sub>O</p>
+  <p><b>Références</b></p>
+  <p>
+    <a
+      href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1604646-creez-des-liens</a><br>
+    <a
+      href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1604791-inserez-des-images</a><br>
+    <a
+      href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1606851-ajoutez-des-tableaux</a><br>
+    <a
+      href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1604534-organisez-votre-texte</a>
+  </p>
+  <p>Notre Addresse</p>
+  <p>
+    <strong>Kinshasa Digital</strong><br>
+    Texaf Digital Campus <br>
+    Concession COTEX ( <b>Référence</b> : en face de l’Ambassade de France) <br>
+    <b>N° 63</b> Avenue Colonel Mondjiba <br>
+    Commune de Ngaliema - Kinshasa <br>
+    République Démocra que du Congo <br>
+    <b>info</b>@kinshasadigital.com <br>
+    <strong>+243 891 341 236</strong><br>
+    Copyright &copy; Kinshasa Digital
+  </p>
+</body>
+
 </html>
