--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  <br>
-  <img src="images/logo_kda.jpg" alt="Logo de KDA" width="150">
-  <p>Bienvenue dans KDA</p>
+  <header>
+      <img src="images/logo_kda.jpg" alt="Logo de KDA" width="150">
+  </header>
+  <h1>Bienvenue dans KDA</h1>
   <p>
     KDA est un un centre de <strong>formation professionnel</strong> offrant une formation intensive au apprenant
     dans le but :
@@ -20,7 +21,7 @@
     <li><i>L’impact sociale</i></li>
   </ol>
   <br>
-  <p>Pédagogie active</p>
+  <h2>Pédagogie active</h2>
   <p>
     La pédagogie utilisée est la pédagogie active car avec cette pédagogie l’apprenant acquiert des
     compétences dans une <strong>démarche inductive</strong>, c’est-à-dire. </p>
@@ -41,7 +42,7 @@
   </figure>
   <p>Pour plus de citations de Confucius rendez vous sur le site <a
       href="#">https://citation-celebre.leparisien.fr/auteur/confucius</a></p>
-  <p>Horaire des cours à la KDA</p>
+  <h2>Horaire des cours à la KDA</h2>
   <table>
     <thead>
       <tr>
@@ -79,7 +80,7 @@
     <b>Ax<sub>2</sub>+Bx+C&gt;C<sub>2</sub>x+15</b>
   </p>
   <p>H<sub>2</sub>O</p>
-  <p><b>Références</b></p>
+  <h2>Références</h2>
   <p>
     <a
       href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1604646-creez-des-liens</a><br>
@@ -91,17 +92,18 @@
       href="#">https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1604534-organisez-votre-texte</a>
   </p>
   <p>Notre Addresse</p>
-  <p>
+  <address>
     <strong>Kinshasa Digital</strong><br>
     Texaf Digital Campus <br>
     Concession COTEX ( <b>Référence</b> : en face de l’Ambassade de France) <br>
     <b>N° 63</b> Avenue Colonel Mondjiba <br>
     Commune de Ngaliema - Kinshasa <br>
-    République Démocra que du Congo <br>
-    <b>info</b>@kinshasadigital.com <br>
-    <strong>+243 891 341 236</strong><br>
+    République Démocratique du Congo <br>
+    <a href="mailto:info@kinshasadigital.com "><b>info</b>@kinshasadigital.com </a>
+    <br>
+    <a href="tel:+243 891 341 236">+243 891 341 236</a><br>
     Copyright &copy; Kinshasa Digital
-  </p>
+  </address>
 </body>
 
 </html>
